@@ -14,15 +14,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.5</version>
+        <version>2.7.18</version>
         <relativePath/>
     </parent>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>8</java.version>
         <protobuf.version>3.25.3</protobuf.version>
         <grpc.version>1.62.2</grpc.version>
-        <mybatis.spring.boot.version>3.0.3</mybatis.spring.boot.version>
+        <mybatis.spring.boot.version>2.3.2</mybatis.spring.boot.version>
     </properties>
 
     <dependencies>
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>net.devh</groupId>
             <artifactId>grpc-client-spring-boot-starter</artifactId>
-            <version>3.0.0.RELEASE</version>
+            <version>2.15.0.RELEASE</version>
         </dependency>
 
         <!-- 添加注解处理库解决javax.annotation.Generated问题 -->
@@ -82,10 +82,7 @@
             <version>1.3.2</version>
         </dependency>
         
-        <dependency>
-            <groupId>jakarta.annotation</groupId>
-            <artifactId>jakarta.annotation-api</artifactId>
-        </dependency>
+
 
         <!-- Dubbo dependencies -->
         <dependency>
@@ -129,7 +126,6 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
